pill pg work: recovery stories, goodrx widget, imgs

--- a/client/main.css
+++ b/client/main.css
@@ -1,6 +1,9 @@
 /* CSS declarations go here */
 
-
+#goodrx_low-price_widget {
+  display: flex;
+  height: auto;
+}
 
 
 .drug-interaction-samples {
