--- a/client/main.css
+++ b/client/main.css
@@ -36,6 +36,95 @@ vertical-align: text-top;
   padding-top: 50%;
 }
 
+#meeting-finder-content {
+  text-align: center;
+      margin: 30px 0;
+}
+
+.chosen-container {
+      width: 100% !important;
+          text-transform: uppercase;
+}
+
+.chosen-container-single .chosen-single {
+  height:50px;
+      padding: 10px !important;
+}
+
+
+#meeting-finder-results-table {
+  width: 100%;
+  border-collapse: collapse;
+      margin: 25px 0;
+}
+
+/* Zebra striping */
+tr:nth-of-type(odd) {
+  background: #eee;
+}
+th {
+  background: #333;
+  color: white;
+  font-weight: bold;
+}
+td, th {
+  padding: 6px;
+  border: 1px solid #ccc;
+  text-align: left;
+}
+
+@media
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+
+	/* Force table to not be like tables anymore */
+	table, thead, tbody, th, td, tr {
+		display: block;
+	}
+
+	/* Hide table headers (but not display: none;, for accessibility) */
+	thead tr {
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+
+	tr { border: 1px solid #ccc; }
+
+	td {
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee;
+		position: relative;
+		padding-left: 50%;
+	}
+
+	td:before {
+		/* Now like a table header */
+		position: absolute;
+		/* Top/left values mimic padding */
+		top: 6px;
+		left: 6px;
+		width: 45%;
+		padding-right: 10px;
+		white-space: nowrap;
+	}
+
+	/*
+	Label the data
+	*/
+	td:nth-of-type(1):before { content: "Type"; }
+	td:nth-of-type(2):before { content: "City/Area"; }
+	td:nth-of-type(3):before { content: "Phone"; }
+	td:nth-of-type(4):before { content: "Time"; }
+	td:nth-of-type(5):before { content: "Location"; }
+	td:nth-of-type(6):before { content: "Contact"; }
+	td:nth-of-type(7):before { content: "Additional Info"; }
+}
+
+
+
+/*///*/
 
 html, body {
   font-family: 'Roboto', 'Helvetica', sans-serif;
